<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, OthelloTestActivity!</string>
    <string name="app_name">Blox</string>
    <string name="othello_legends">Othello Legends</string>
    <string name="yourlevel">Your level:</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level1name">Noob</string>
    <string name="level2name">Novice</string>
    <string name="level3name">Amateur</string>
    <string name="levelinformation">Advance through levels by beating more and more difficult opponents. Opponents on low levels plays naively. Players on higher levels knows more advanced tactics. Opponents at levels above 10 are familiar with classic Othello openings and are notoriously good at deep end game analysis. How good are you?</string>
    <string name="questionmark">Help</string>
    <string name="wins">Wins: </string>
    <string name="bestgame">Best:</string>
    <string name="noneplayed">None played</string>
    <string name="level4">Level 4</string>
    <string name="level4name">Seasoned</string>
    <string name="config">Config</string>
    <string name="quit">Quit</string>
    <string name="back">Continue</string>
    <string name="empty"></string>
    <string name="level5">Level 5</string>
    <string name="level5name">Experienced</string>
    <string name="level6">Level 6</string>
    <string name="level6name">Expert</string>
    <string name="halloffame">Hall of fame</string>
    <string name="welcome">Welcome to Othello Legends</string>
    <string name="whatsyourname">"What's your name?"</string>
    <string name="play">Play</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="help1">Pretty much the only rule in Othello is that you may put a tile adjacent to a tile of your opponents color if and only if you have a tile of your own color behind the flippable tile or a set of such tiles.</string>
    <string name="help1_2">In the example above, if white is to play, he/she may play in the highlighted spots. Players takes turn to put new tiles to the table. When no player can make a move the player with most tiles wins. Read more about the rules of the game at http://en.wikipedia.org/wiki/Reversi.</string>
    <string name="help1_5">In Othello Legends you face increasingly well playing opponents as you conquer new levels. Your total score is made up by the difference between your white tiles and the opponents black tiles at the end of each game. To increase your total score, replay a game already won by beating the opponent by more tiles. If you can take all your opponents tiles, you\'re awarded a \"perfect game\" and 100 points.</string>
    <string name="help2">"To navigate in the game, click on objects with blinking frames and you'll be fine. To choose a level, click on the red padlocks. Green padlocks indicate a level you already finished (but which you may replay to increase your score). Unlock new levels by beating your opponents."</string>
    <string name="help3">"Avoid giving away corners and you're on your way to the highscore list! Remember, a minute to learn, a lifetime to master. Good luck."</string>
    <string name="othellolegendshelp">Othello Legends - Help</string>
    <string name="othellolegendsabout">Othello Legends - About</string>
    <string name="about3">Othello Legends is made by MacGyver Development. Sporadic notes on development can be found at http://macgyverdev.blogspot.com.</string>
    <string name="about1">Google AdMob and Analytics wants us to acknowledge that by playing the game you agree that they may show you advertisement in the game.</string>
    <string name="about2">The implementation of Othello Legends is based on the jPCT OpenGL framework for rendering, Blender 3D for graphics design and Google App Engine for keeping backend highscore services. By playing the game, you reserve us the right to (anonymously of course) track and report activity in your app to our highscore service and analytics tool to improve the game (Google Analytics). Google AdMob is used to show ads so we can keep the game free and hopefully create new titles.</string>
    <string name="about4">Thanks for playing and good luck!</string>
    <string name="startGame">Start game</string>
    <string name="quickstart">Othello Legends - Quick start</string>
    <string name="quickstart1">Choose a level to play by touching a padlock beside the level descriptions. </string>
    <string name="quickstart2">When moving around in the game room click on objects with pulsating frames to select them. Click on green arrows to go back to previous states. Good luck!</string>
    <string name="startNewGame">New game</string>
</resources>
