<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/aboutLinearLayout">
    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content">
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="fill_parent">
            <Button android:gravity="fill" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/back" android:id="@+id/aboutGoBackButton"></Button>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/othellolegendsabout" android:layout_marginRight="5px" android:layout_marginLeft="5px"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="10px" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/about2" android:layout_marginRight="5px" android:layout_marginLeft="5px"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="10px" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/about3" android:layout_marginLeft="5px" android:layout_marginRight="5px"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginTop="10px" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:text="@string/about4"></TextView>
        </TableRow>

    </TableLayout>
   
</LinearLayout>
