<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMenuLinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_gravity="top">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:src="@drawable/blox" android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="top" android:layout_marginBottom="20px"></ImageView>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TableLayout android:id="@+id/tableLayout2" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TableRow android:id="@+id/tableRow4" android:layout_height="wrap_content" android:layout_width="fill_parent">
                    <Button android:text="@string/play" android:id="@+id/playButton" android:layout_height="wrap_content" android:enabled="false" android:layout_width="wrap_content" android:layout_weight="8"></Button>
                    <Button android:text="@string/help" android:layout_width="wrap_content" android:id="@+id/helpButton" android:layout_height="wrap_content" android:layout_weight="1"></Button>
                    <Button android:text="@string/about" android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="center_vertical" android:layout_weight="1" android:id="@+id/aboutButton"></Button>
                </TableRow>
            </TableLayout>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <EditText android:inputType="textPersonName" android:layout_height="wrap_content" android:id="@+id/editText1" android:layout_width="wrap_content">
                <requestFocus></requestFocus>
            </EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
        </TableRow>
    </TableLayout>
   
</LinearLayout>
